--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
     }
     
     .textoBlanco {
-      color: white;
+      color: rgb(255, 255, 255);
       font-size: 20px;
     }
     
@@ -31,6 +31,10 @@
       margin-top: 10%;
     }
     
+    .fondo {
+      background-color: rgb(167, 168, 168);
+
+    }
     .rayita {
       width: 30%;
       border: 1px solid white;
@@ -74,7 +78,7 @@
     .recuadroBordesBlancos {
       border-top: 2px solid white;
       border-bottom: 2px solid white;
-      border-right: 2px solid white;
+      border-right: -120px solid white;
       padding-left: 5%;
       padding-top: 5%;
       padding-bottom: 5%;
@@ -154,20 +158,23 @@
     }
     
     iframe {
-      width: 70%;
-      height: 350px;;
-      border: 2px solid white;
+    margin-left: 120px; 
+    width: 400px;
+    height: 400px;
+    border: 2px solid white;
     }
     
     footer {
-      background-color: #383736;
+      background-color: #1b1a18;
     }
     
     .redesSociales {
-      color: white;
-      padding-top: 1%;
+      color: #fbfbfb;
     }
     
+    .icono {
+      margin-top: 230px;
+    }
     .facebook {
       margin: 10px;
     }
