--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-
 /* Los estilos de tu proyecto */
 * {
   margin: 0;
@@ -9,7 +8,7 @@
     }
     
     .textoBlanco {
-      color: white;
+      color: rgb(255, 255, 255);
       font-size: 20px;
     }
     
@@ -31,6 +30,10 @@
       margin-top: 10%;
     }
     
+    .fondo {
+      background-color: rgb(167, 168, 168);
+
+    }
     .rayita {
       width: 30%;
       border: 1px solid white;
@@ -74,7 +77,7 @@
     .recuadroBordesBlancos {
       border-top: 2px solid white;
       border-bottom: 2px solid white;
-      border-right: 2px solid white;
+      border-right: -120px solid white;
       padding-left: 5%;
       padding-top: 5%;
       padding-bottom: 5%;
@@ -154,23 +157,19 @@
     }
     
     iframe {
-      width: 70%;
-      height: 350px;;
-      border: 2px solid white;
+    border: 2px solid white;
     }
     
     footer {
-      background-color: #383736;
+      background-color: #1b1a18;
     }
     
     .redesSociales {
-      color: white;
-      padding-top: 1%;
+      color: #fbfbfb;
+      margin-right: 12px;
+      margin-top: 230px;
     }
-    
-    .facebook {
-      margin: 10px;
-    }
+   
     .tiendas {
       padding-top: 10%;
     }
