--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-
 /* Los estilos de tu proyecto */
 * {
   margin: 0;
@@ -158,9 +157,6 @@
     }
     
     iframe {
-    margin-left: 120px; 
-    width: 400px;
-    height: 400px;
     border: 2px solid white;
     }
     
@@ -170,14 +166,10 @@
     
     .redesSociales {
       color: #fbfbfb;
-    }
-    
-    .icono {
+      margin-right: 12px;
       margin-top: 230px;
     }
-    .facebook {
-      margin: 10px;
-    }
+   
     .tiendas {
       padding-top: 10%;
     }
