--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,12 @@
     
     iframe {
     border: 2px solid white;
+      
+    .img-responsive, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin-left: 7px;
     }
     
     footer {
