--- a/css/main.css
+++ b/css/main.css
@@ -98,8 +98,8 @@ h3, .h3 {
   color: black;
 }
 h6, .h6 {
-font-size: 10px;
-color: rgba(0, 0, 0, 0.904);
+  font-size: 10px;
+  color: rgba(0, 0, 0, 0.904);
 }
 
 .opaco {
@@ -156,19 +156,13 @@ color: rgba(0, 0, 0, 0.904);
   padding-bottom: 5%;
 }
 
-iframe {
-border: 2px solid white;
-margin-left: 0px;
-width: 400px;
-height: 400px;
-border: 2px solid white;
+.iframe {
+  border: 2px solid white;
+  margin-left: 0px;
+  width: 400px;
+  height: 400px;
+  border: 2px solid white;
 
-.img-responsive, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-display: block;
-max-width: 100%;
-height: auto;
-margin-left: 7px;
-}
 
 footer {
   background-color: #1b1a18;
@@ -184,6 +178,6 @@ footer {
   padding-top: 10%;
 }
 .tiendas img{
-    margin: 1%;
-    margin-left: 90px;
+  margin: 1%;
+  margin-left: 90px;
 }
